@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-02-19
+CHANGES.txt - 2009-02-25
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The cups-deviced helper program could miss reporting some backend
+	  devices (STR #3108)
 	- The cupsSideChannelSNMP* functions did not work.
 	- The scheduler could consume 100% CPU when jobs were canceled.
 	- Added complete localizations for Japanese and Russian and partial
